[tool.poetry]
name = "image_composition"
version = "0.1.0"
description = ""
authors = ["watarui <wataruby@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
Pillow = "^6.1"
itsdangerous = "^1.1"
flask-wtf = "^0.14.2"
apscheduler = "^3.6"
uwsgi = "^2.0"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pytest = "^5.0"
isort = "^4.3"
pylint = "^2.3"
rope = "^0.14.0"
flake8 = "^3.7"
mypy = "^0.720.0"
docutils = "^0.15.2"
doc8 = "^0.8.0"
Pygments = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
